--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "babel-preset-react-hmre": "^1.1.1",
+    "css-loader": "^0.23.1",
     "jquery": "^3.1.0",
     "lodash": "^4.14.2",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
+    "style-loader": "^0.13.1",
     "uuid": "^2.0.2",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
