--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jquery": "^3.1.0",
     "lodash": "^4.14.2",
     "react": "^15.3.0",
+    "react-bootstrap": "^0.30.2",
     "react-dom": "^15.3.0",
     "style-loader": "^0.13.1",
     "uuid": "^2.0.2",
